Fix textarea spacing

--- a/css/style.css
+++ b/css/style.css
@@ -246,9 +246,9 @@ footer .social {
 }
 
 #contact textarea {
-	padding: .25rem .5rem;
+	padding: .5rem .5rem;
 	max-width: 40rem;
-	height: 10rem;
+	height: 15rem;
 	font-family: inter;
 	font-size: 1rem;
 	width: 100%;
